# lab8

./: CMakeLists.txt  Calculate.cpp  Calculate.h  Stack.h  main.cpp
lab8/: CMakeLists.txt  Calculate.cpp  Calculate.h  Stack.h  Tests.cpp  main.cpp
